Be somewhat safer when reading the message serial number dict for a folder from disk. The format is still not completely safe, but since we haven't had any more reports of this problem it seems to have been intermittent and there is not much more we can do. Folders can be very large, so any kind of a maximum size would have to be so large as to be useless. If anyone has a patch to improve this further, send it my way.

BUG: 70406

svn path=/trunk/kdepim/; revision=373783